--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guilherme José - Portfolio</title>
-    <link rel="stylesheet" href="../Style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
@@ -22,10 +22,10 @@
         <img id="foto">
         </div>  
     </section>
-
+<main>
     <section id="habilidades">
 
-
+        <div id="html"> </div> 
 
         
 
@@ -36,8 +36,9 @@
 
     </section>
 
+</main>
 
-    <footer>
+    <footer id="">
 
         
     </footer>
