--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
 <body>
     <header id="cabecalho">
-        <h2>About Me</h2>
-        <h2>Projects</h2>
-        <h2>Languages</h2>
+        <h2 id="sobre">About Me</h2>
+        <h2 id="projetcs">Projects</h2>
+        <h2 id="programa">Languages</h2>
     </header>
 
     <section id="introducao">
 
         <!-- Quero fazer um item que intereja com a página -->
-        <div class="pessoa">
-            <img id="foto">
+        <div id="pessoa">
+            <img id="foto" src="#">
         </div>
     </section>
     <main>
