--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
 <body>
     <header id="cabecalho">
-        <h2 id="sobre">About Me</h2>
-        <h2 id="projetcs">Projects</h2>
-        <h2 id="programa">Languages</h2>
+        <ul>
+        <li id="sobre">About Me</li>
+         <li id="projetcs">Projects</li>
+       <li id="programa">Languages </li>
+        </ul>
     </header>
 
     <section id="introducao">
@@ -25,8 +27,8 @@
     <main>
         <section id="habilidades">
 
-            <div id="html"> </div>
-
+            <div id="html"> <h6>  </h6> </div>
+            <div id="Js"> </div> 
 
 
             <!-- Buraco negro que suge as coisas -->
