--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guilherme José - Portfolio</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./public/assets/style/style.css">
 </head>
 
 <body>
     <header id="cabecalho">
-        <ul>
-        <li id="sobre">About Me</li>
-         <li id="projetcs">Projects</li>
-       <li id="programa">Languages </li>
-        </ul>
+      
+            <ul>
+            <li id="sobre">About Me</li>
+             <li id="projetcs">Projects</li>
+           <li id="programa">Languages </li>
+            </ul>
+      
     </header>
 
     <section id="introducao">
