--- a/index.html
+++ b/index.html
@@ -23,24 +23,34 @@
 
     <main>
 
-        
-    <section id="introducao">
 
-        <!-- Quero fazer um item que intereja com a página -->
+        <section id="introducao">
+
+            <!-- Quero fazer um item que intereja com a página -->
 
 
-        <div id="pessoa">
-            <img id="foto" src="#">
-        </div>
-    </section>
+            <div id="pessoa">
+                <img id="foto" src="#">
 
-    <div id="foguete">   </div>
+
+            </div>
+        </section>
+
+        <div class="foguete" id="foguete"> </div>
+
+
         <section id="habilidades">
 
-            <div id="html">
-                <h6> </h6>
+
+            <div id="aaa">
+                <img src="#"> 
+                <h6> aaa</h6>
             </div>
-            <div id="Js"> </div>
+
+            <div id="Js"> 
+
+
+            </div>
 
 
 
@@ -58,5 +68,6 @@
     </footer>
 </body>
 
-    <script src="./javascript.js"></script>
+<script src="./javascript.js"></script>
+
 </html>
