--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
         <section id="habilidades">
 
 
-            <div class="" id="Csharp">
+            <div class="habilidades" id="Csharp">
                 <img src="#">
                 <h6> Csharp</h6>
             </div>
 
-            <div id="Js">
+            <div class="habilidades" id="Js">
                 <img src="#">
 
             </div>
