--- a/index.html
+++ b/index.html
@@ -51,15 +51,19 @@
 
             <div class="habilidades" id="Csharp">
                 <img src="#">
-                <h6> Csharp</h6>
+                <p> Csharp</p>
             </div>
 
             <div class="habilidades" id="Js">
                 <img src="#">
-
+                <p>Javascript</p>
             </div>
 
-
+            <div class="habilidades" id="Python">
+                <img src="#">
+                <p>Python</p>
+                
+            </div>
 
         </section>
 
