--- a/index.html
+++ b/index.html
@@ -66,8 +66,16 @@
             </div>
 
         </section>
+    
+        <br>
 
         <section id="extras">
+
+            <div id="projetcs">
+                <h2>Projetos </h2>
+                
+            </div>
+
 
         </section>
 
