--- a/HTML/habilidades.html
+++ b/HTML/habilidades.html
@@ -27,3 +27,30 @@
     </header>
 
     <main>
+        <section id="habilidades">
+
+
+            <div class="habilidades" id="Csharp">
+                <img src="#">
+                <p> </p>
+            </div>
+
+            <div class="habilidades" id="Js">
+                <img src="#">
+                <p></p>
+            </div>
+
+            <div class="habilidades" id="Python">
+                <img src="#">
+                <p></p>
+                
+            </div>
+
+        </section>
+
+    </main>
+
+
+    </body>
+
+</html>
