--- a/HTML/index.html
+++ b/HTML/index.html
@@ -46,17 +46,18 @@
         <section id="habilidades">
 
 
-            <div class="habilidades" id="Csharp">
-                <img src="#">
-                <p> </p>
+            <div class="habilidades" id="">
+                <img src="">
+                <p> Olá, sou o Guilherme</p>
+                <p>Não sou a melhores da pessoa para se conversar, pois sempre estarei pensando em muitas coisas ao mesmo tempo, com dezenas de ideias e seguindo poucas delas e falando ainda menos sobre elas </p> 
             </div>
 
-            <div class="habilidades" id="Js">
+            <div class="habilidades" id="">
                 <img src="#">
                 <p></p>
             </div>
 
-            <div class="habilidades" id="Python">
+            <div class="habilidades" id="">
                 <img src="#">
                 <p></p>
                 
@@ -83,6 +84,6 @@
     </footer>
 </body>
 
-<script src="./javascript.js"></script>
+<script src="../javascript.js"></script>
 
 </html>
