--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,10 +14,9 @@
 
 <body>
 
-
     <header id="cabecalho">
 
-            <h3 id="inicio"><a href="./index.html">Inicio</a></h3>
+            <h3 id="inicio"><a href="habilidades.html">Inicio</a></h3>
             <h3 id="sobre"><a href="./Sobre.html">About Me</a></h3>
             <h3 id="projetcs"><a href="./Projetos.html">Projetos</a></h3>
             <h3 id="programa"><a href="./habilidades.html">Habilidades</a> </h3>
@@ -43,15 +42,15 @@
         <div class="foguete" id="foguete"><img src="../public/assets/style/imagens/foguete_provisorio.png"> </div>
 
 
-        <section id="habilidades">
-
-
-            <div class="habilidades" id="">
-                <img src="">
+        <section id="SobreMIM">
+            <div class="sobremim" id="">
                 <p> Olá, sou o Guilherme</p>
                 <p>Não sou a melhores da pessoa para se conversar, pois sempre estarei pensando em muitas coisas ao mesmo tempo, com dezenas de ideias e seguindo poucas delas e falando ainda menos sobre elas </p> 
             </div>
 
+        </section>
+
+     <section id="habilidades">
             <div class="habilidades" id="">
                 <img src="#">
                 <p></p>
