adição da ideia de sistema solar girarando( talvez seja removido)

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -26,10 +26,16 @@
     </header>
 
     <main>
-       
+
 
 
         <section id="introducao">
+
+            <div class="orbit-sun">
+                <div class="planet orbit1"></div>
+                <div class="planet orbit2"></div>
+            </div>
+
 
             <div id="pessoa">
 
@@ -37,6 +43,10 @@
                 <img id="foto" src="../public/assets/style/imagens/Eu.jpg">
 
             </div>
+
+
+
+
         </section>
 
 
@@ -54,13 +64,16 @@
 
         <section id="habilidades">
 
+            <div class="titulo"><h1>Habilidades</h1></div>
+
             <div class="habilidades" id="">
                 <img src="#">
                 <p></p>
             </div>
 
             <div class="habilidades">
-             <div class="foguete" id="foguete"><img src="../public/assets/style/imagens/foguete_provisorio.png"> </div>
+                <div class="foguete" id="foguete"><img src="../public/assets/style/imagens/foguete_provisorio.png">
+                </div>
             </div>
         </section>
 
