Adicição de alguns "planetas" no sistema solar, e scroll suave

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -34,6 +34,10 @@
             <div class="orbit-sun">
                 <div class="planet orbit1"></div>
                 <div class="planet orbit2"></div>
+                <div class="planet orbit3"></div>
+                <div class="planet orbit4"></div>
+                <div class="planet orbit5"></div>
+
             </div>
 
 
