Termino das orbitas do planetas (rever depois)

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -32,11 +32,14 @@
         <section id="introducao">
 
             <div class="orbit-sun">
-                <div class="planet orbit1"></div>
-                <div class="planet orbit2"></div>
-                <div class="planet orbit3"></div>
-                <div class="planet orbit4"></div>
-                <div class="planet orbit5"></div>
+                <div class="planet mercurio"></div>
+                <div class="planet venus"></div>
+                <div class="planet terra"></div>
+                <div class="planet marte"></div>
+                <div class="planet jupiter"></div>
+                <div class="planet saturno"></div>
+                <div class="planet urano"></div>
+                <div class="planet netuno"></div>
 
             </div>
 
