Mais mudanças nos planetas(erro na rotação e nos tamanhos)

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -30,7 +30,7 @@
 
 
         <section id="introducao">
-
+            <div class="sistema-solar">
             <div class="orbit-sun">
                 <div class="planet mercurio"></div>
                 <div class="planet venus"></div>
@@ -42,7 +42,7 @@
                 <div class="planet netuno"></div>
 
             </div>
-
+            </div>
 
             <div id="pessoa">
 
