tentativa de arrumar o foguete

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -31,17 +31,17 @@
 
         <section id="introducao">
             <div class="sistema-solar">
-            <div class="orbit-sun">
-                <div class="planet mercurio"></div>
-                <div class="planet venus"></div>
-                <div class="planet terra"></div>
-                <div class="planet marte"></div>
-                <div class="planet jupiter"></div>
-                <div class="planet saturno"></div>
-                <div class="planet urano"></div>
-                <div class="planet netuno"></div>
+                <div class="orbit-sun">
+                    <div class="planet mercurio"></div>
+                    <div class="planet venus"></div>
+                    <div class="planet terra"></div>
+                    <div class="planet marte"></div>
+                    <div class="planet jupiter"></div>
+                    <div class="planet saturno"></div>
+                    <div class="planet urano"></div>
+                    <div class="planet netuno"></div>
 
-            </div>
+                </div>
             </div>
 
             <div id="pessoa">
@@ -71,7 +71,9 @@
 
         <section id="habilidades">
 
-            <div class="titulo"><h1>Habilidades</h1></div>
+            <div class="titulo">
+                <h1>Habilidades</h1>
+            </div>
 
             <div class="habilidades" id="">
                 <img src="#">
@@ -79,7 +81,7 @@
             </div>
 
             <div class="habilidades">
-                <div class="foguete" id="foguete"><img src="../public/assets/style/imagens/foguete_provisorio.png">
+                <div  id="foguete"><img src="../public/assets/style/imagens/foguete_provisorio.png">
                 </div>
             </div>
         </section>
@@ -97,10 +99,11 @@
             <p> </p>
         </section>
 
+    </main>
 
-        <footer id="rodape">
-            <p></p>
-        </footer>
+    <footer id="rodape">
+        <p></p>
+    </footer>
 </body>
 
 <script src="../javascript.js"></script>
