mudança texto Sobre

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -63,8 +63,8 @@
         <section id="Sobre">
             <div id="sobremim">
                 <p> Olá, sou o Guilherme</p>
-                <p>Não sou a melhores da pessoa para se conversar, pois sempre estarei pensando em muitas coisas ao
-                    mesmo tempo, com dezenas de ideias e seguindo poucas delas e falando ainda menos sobre elas </p>
+                <p>Não sou a melhores da pessoa para se conversar, sempre estarei com a mente viajando pelo espaço, 
+                 com dezenas de ideias e seguindo poucas e falando ainda menos sobre, obrigado pela aterrissagem. </p>
             </div>
 
         </section>
