--- a/HTML/index.html
+++ b/HTML/index.html
@@ -72,7 +72,7 @@
         <section id="habilidades">
 
             <div class="titulo">
-                <h1>Habilidades</h1>
+                <h1>Minhas habilidades</h1>
             </div>
 
             <div class="habilidades" id="">
